/**
 * Copyright (C) 2011-2012 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

//
/**
 * https://developers.google.com/protocol-buffers/docs/proto
 *
 * factory for messages
 */

//
package barchart; // non-java (C, C++, etc) package name space
option java_package = "com.barchart.proto.buf.data";
option java_outer_classname = "MessageSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

// message fields
import "FieldSpec.proto";

// market data message
message MarketMessage {
//
	enum Type {
		UPDATE = 0;
		SNAPSHOT = 1;
	}

	//
	optional Type type = 1;
	//
	optional sint64 marketId = 2; // market guid; base for entries
	optional sint64 sequence = 3; // market sequence number; base for entries
	optional sint64 timeStamp = 4; // base for entries; time in format 2012-12-31T23:59:59.123 UTC -> 20121231235959123
	optional sint32 tradeDate = 5; // base for entries; date in format 2012-07-04 -> 20120704
	//
	repeated MarketEntry entry = 6; // list of entries
	//
	optional sint32 priceExponent = 7; // base for entries
	optional sint32 sizeExponent = 8; // base for entries

	// TODO
	// this should be encoded as an MarketEntry with Type=SEQUENCE, index=lastSequenceProcessed, etc
	//	optional sint64 lastSequenceProcessed = 9;
	//
}
